# opencl

./: .gitignore  CMakeLists.txt  README.md  main.cl  main.cpp
lib/: jpeg.lib
